Sending message via email if flag is set to true (default is false)